SET (SUBPROJECT led_test)
PROJECT (${SUBPROJECT})

IF (NOT PROJECT_WORKING_CHARSET)
 SET (PROJECT_WORKING_CHARSET "UTF8")
ENDIF(NOT PROJECT_WORKING_CHARSET)


FIND_PACKAGE(Boost COMPONENTS program_options  REQUIRED)
IF (NOT Boost_FOUND)
    MESSAGE(FATAL_ERROR "Boost not found")
ENDIF(NOT Boost_FOUND)




SET (SOURCES
   main.cpp
 
)



ADD_EXECUTABLE(${SUBPROJECT}  ${SOURCES}  )

TARGET_INCLUDE_DIRECTORIES(${SUBPROJECT} PUBLIC ${FULL_SOURCE_DIR} )


TARGET_LINK_LIBRARIES (${SUBPROJECT} yqnet boost_system boost_thread boost_filesystem boost_date_time  )


#TARGET_LINK_LIBRARIES (${SUBPROJECT}  eom codesysnv )




