SET (SUBPROJECT led_test)
PROJECT (${SUBPROJECT})

IF (NOT PROJECT_WORKING_CHARSET)
 SET (PROJECT_WORKING_CHARSET "UTF8")
ENDIF(NOT PROJECT_WORKING_CHARSET)


SET (${SUBPROJECT}_FULL_DATADIR "${CMAKE_FULL_DATADIR}" )


IF (PROJECT_BUILD_TYPE  STREQUAL DEVELOP)
  SET (${SUBPROJECT}_FULL_DATADIR  "${${SUBPROJECT}_SOURCE_DIR}/share")
ENDIF (PROJECT_BUILD_TYPE  STREQUAL DEVELOP)

GET_FILENAME_COMPONENT(PROJECT_DATADIR  "${${SUBPROJECT}_FULL_DATADIR}" REALPATH)

MESSAGE("${${SUBPROJECT}_FULL_DATADIR}")
CONFIGURE_FILE(config.h.in "${${SUBPROJECT}_SOURCE_DIR}/config.h" ESCAPE_QUOTES)


SET (SOURCES
   main.cpp
)






ADD_EXECUTABLE(${SUBPROJECT}  ${SOURCES}  )




TARGET_INCLUDE_DIRECTORIES(${SUBPROJECT} PUBLIC ${FULL_SOURCE_DIR} )


TARGET_LINK_LIBRARIES (${SUBPROJECT} yqnet boost_system boost_thread boost_filesystem boost_date_time ledmatrix )


#TARGET_LINK_LIBRARIES (${SUBPROJECT}  eom codesysnv )




