SET (SUBPROJECT yqnet)
PROJECT(${SUBPROJECT})


ADD_LIBRARY(${SUBPROJECT}  SHARED IMPORTED  GLOBAL)
SET_TARGET_PROPERTIES(${SUBPROJECT} PROPERTIES IMPORTED_LOCATION "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libyqnet.so" IMPORTED_NO_SONAME TRUE)


ADD_LIBRARY(boost_system SHARED IMPORTED  GLOBAL)
SET_TARGET_PROPERTIES(boost_system PROPERTIES IMPORTED_LOCATION "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libboost_system.so.1.53.0" IMPORTED_NO_SONAME FALSE)

ADD_LIBRARY(boost_thread  SHARED IMPORTED  GLOBAL)
SET_TARGET_PROPERTIES(boost_thread PROPERTIES IMPORTED_LOCATION "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libboost_thread.so.1.53.0" IMPORTED_NO_SONAME FALSE)

ADD_LIBRARY(boost_filesystem  SHARED IMPORTED  GLOBAL)
SET_TARGET_PROPERTIES(boost_filesystem PROPERTIES IMPORTED_LOCATION "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libboost_filesystem.so.1.53.0" IMPORTED_NO_SONAME FALSE)

ADD_LIBRARY(boost_date_time SHARED IMPORTED  GLOBAL)
SET_TARGET_PROPERTIES(boost_date_time PROPERTIES IMPORTED_LOCATION "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libboost_date_time.so.1.53.0" IMPORTED_NO_SONAME FALSE)

MESSAGE(outdir "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}")

ADD_CUSTOM_COMMAND(
        OUTPUT "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libyqnet.so" "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libboost_system.so.1.53.0" "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libboost_thread.so.1.53.0" "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libboost_filesystem.so.1.53.0" "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libboost_date_time.so.1.53.0"
        COMMAND ${CMAKE_COMMAND} -E copy "${${SUBPROJECT}_SOURCE_DIR}/libyqnet.so" "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libyqnet.so"

        COMMAND ${CMAKE_COMMAND} -E copy "${${SUBPROJECT}_SOURCE_DIR}/libboost_system.so.1.53.0" "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libboost_system.so.1.53.0"
        COMMAND ${CMAKE_COMMAND} -E copy "${${SUBPROJECT}_SOURCE_DIR}/libboost_thread.so.1.53.0" "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libboost_thread.so.1.53.0"
        COMMAND ${CMAKE_COMMAND} -E copy "${${SUBPROJECT}_SOURCE_DIR}/libboost_filesystem.so.1.53.0" "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libboost_filesystem.so.1.53.0"
        COMMAND ${CMAKE_COMMAND} -E copy "${${SUBPROJECT}_SOURCE_DIR}/libboost_date_time.so.1.53.0" "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libboost_date_time.so.1.53.0"
        )

ADD_CUSTOM_TARGET(${SUBPROJECT}_AUX

     DEPENDS "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libyqnet.so" "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libboost_system.so.1.53.0" "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libboost_thread.so.1.53.0" "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libboost_filesystem.so.1.53.0" "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libboost_date_time.so.1.53.0"
)

ADD_DEPENDENCIES(${SUBPROJECT} ${SUBPROJECT}_AUX )

ADD_DEPENDENCIES(boost_system ${SUBPROJECT}_AUX )
ADD_DEPENDENCIES(boost_thread ${SUBPROJECT}_AUX )
ADD_DEPENDENCIES(boost_filesystem ${SUBPROJECT}_AUX )
ADD_DEPENDENCIES(boost_date_time ${SUBPROJECT}_AUX )


